--- a/lib/app/appm/template/list.html
+++ b/lib/app/appm/template/list.html
@@ -4,6 +4,7 @@
     <td>说明</td>
     <td width="200">操作</td>
   </tr>
+  {% if list.length > 0 %}
   {% for app in list %}
   <tr>
     <td>{{app.name}}</td>
@@ -13,4 +14,9 @@
     </td>
   </tr>
   {% endfor %}
+  {% else %}
+  <tr>
+    <td colspan="3">没有找到任何应用！</td>
+  </tr>
+  {% endif %}
 </table>
