完成简单文件管理器

--- a/lib/app/filem/public/index.css
+++ b/lib/app/filem/public/index.css
@@ -5,6 +5,9 @@
 .file-list {
   margin: auto;
 }
+.filetype-dir {
+  background-color: #FFFBF4;
+}
 .top-side tr:first-child {
   background-color: #EEE;
   font-weight: normal;
