--- a/lib/app/filem/template/list.html
+++ b/lib/app/filem/template/list.html
@@ -8,7 +8,7 @@
   </tr>
   {% if list.length > 0 %}
   {% for file in list %}
-  <tr>
+  <tr class="filetype-{{file.type}}">
     <td>
       {% if file.type == 'file' %}
         <a href="/admin/file/view?path={{file.path}}" target="_blank">{{file.name}}</a>
