实现“插件重载”功能

--- a/lib/app/plusm/template/list.html
+++ b/lib/app/plusm/template/list.html
@@ -10,7 +10,7 @@
     <td>{{plus.name}}</td>
     <td>{{plus.about}}</td>
     <td>
-      <a href="#/" class="btn">重新载入</a>
+      <a href="#/reload/{{plus.name}}" class="btn">重新载入</a>
     </td>
   </tr>
   {% endfor %}
