--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,29 @@
+::-webkit-scrollbar {
+  height: 16px;
+  overflow: visible;
+  width: 16px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, .2);
+  background-clip: padding-box;
+  border: solid transparent;
+  border-width: 1px 1px 1px 6px;
+  min-height: 28px;
+  padding: 100px 0 0;
+  box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1),inset 0 -1px 0 rgba(0, 0, 0, .07);
+}
+::-webkit-scrollbar-button {
+  height: 0;
+  width: 0;
+}
+::-webkit-scrollbar-track {
+  background-clip: padding-box;
+  border: solid transparent;
+  border-width: 0 0 0 4px;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 body {
   max-width: 1200px;
   margin: auto;
@@ -29,9 +55,24 @@ body.home-page {
   padding: 8px;
   line-height: 1.6em;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .log-lines pre {
   margin: 0px;
+}
+.online-logs button {
+  background-color: #222;
+  border: 1px solid #CCC;
+  color: #CCC;
+  border-radius: 2px;
+}
+.online-logs button:hover {
+  cursor: pointer;
+  color: yellow;
+  border: 1px solid yellow;
+}
+.online-logs ::-webkit-scrollbar-thumb {
+  background-color: #CCC;
 }
 a {
   color: #08C;
