当点击了指定进程的“详细信息”按钮时才在线输出该进程的控制台输出信息

--- a/lib/app/taskm/template/list.html
+++ b/lib/app/taskm/template/list.html
@@ -12,7 +12,7 @@
     <td>{{task.type}}</td>
     <td>{{task.status}}</td>
     <td>
-      <a href="/plusui/{{task.type}}.app/#/status/{{task.id}}" class="btn">详细信息</a>
+      <a href="/plusui/{{task.type}}.app/#/status/{{task.id}}" onclick="parent.logsSwitchToTask('{{task.id}}')" class="btn">详细信息</a>
       <a href="#/task/stop/{{task.id}}" class="btn">停止</a>
     </td>
   </tr>
