--- a/lib/app/appm/template/list.html
+++ b/lib/app/appm/template/list.html
@@ -11,6 +11,7 @@
     <td>{{app.description}}</td>
     <td>
       <a href="#/app/start/{{app.name}}" class="btn">启动</a>
+      <a href="#/app/edit/{{app.name}}" class="btn">编辑</a>
     </td>
   </tr>
   {% endfor %}
