应用编辑界面：删除

--- a/lib/app/appm/template/list.html
+++ b/lib/app/appm/template/list.html
@@ -12,6 +12,7 @@
     <td>
       <a href="#/app/start/{{app.name}}" class="btn">启动</a>
       <a href="#/app/edit/{{app.name}}" class="btn">编辑</a>
+      <a href="#/app/remove/{{app.name}}" class="btn">删除</a>
     </td>
   </tr>
   {% endfor %}
