修正应用管理页面文字描述

--- a/lib/app/appm/template/editor.html
+++ b/lib/app/appm/template/editor.html
@@ -22,8 +22,8 @@
 		</tr>
     <tr>
 			<td>&nbsp; 子进程数：</td>
-			<td><input id="app-cluster" type="text" placeholder="2" value="{% if cluster %}{{cluster}}{% endif %}"></td>
-			<td class="explain">要启动的cluster子进程数量，仅当应用类型为<strong>cluster</strong>，<strong>command</strong>时有效</td>
+			<td><input id="app-cluster" type="text" placeholder="1" value="{% if cluster %}{{cluster}}{% endif %}"></td>
+			<td class="explain">要启动的cluster子进程数量，仅当应用类型为<strong>cluster</strong>时有效</td>
 		</tr>
 		<tr>
 			<td>&nbsp; 日志文件：</td>
