--- a/lib/app/taskm/template/list.html
+++ b/lib/app/taskm/template/list.html
@@ -9,8 +9,8 @@
   {% for task in list %}
   <tr>
     <td>{{task.id}}</td>
-    <td>{{task.type}}</td>
-    <td>{{task.status}}</td>
+    <td>{% if task.schedule %}schedule:{% endif %}{{task.type}}</td>
+    <td>{% if task.schedule %}时间表：{{task.schedule}}，{% endif %}{{task.status}}</td>
     <td>
       <a href="/plusui/{{task.type}}.app/#/status/{{task.id}}" onclick="parent.logsSwitchToTask('{{task.id}}')" class="btn">详细信息</a>
       <a href="#/task/stop/{{task.id}}" class="btn">停止</a>
